[project]
name = "rst-budoux"
version = "0.0.0"
description = "Text splitter in reStructuredText by BudouX"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "docutils~=0.21.2",
    "budoux~=0.6.2",
]
readme = "README.rst"
requires-python = ">= 3.8"
license = { text = "Apache-2.0" }

[project.scripts]
"rst-budoux2pseudoxml" = "rst_budoux.cli.psuedoxml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "esbonio~=0.16.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rst_budoux"]
